fix: configure less ops per ms